--- a/Bet365Project/packages.config
+++ b/Bet365Project/packages.config
@@ -2,9 +2,12 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.3.7" targetFramework="net45" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
+  <package id="Google.Protobuf" version="3.5.1" targetFramework="net461" />
+  <package id="HtmlAgilityPack" version="1.8.7" targetFramework="net45" />
   <package id="jQuery" version="3.3.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net45" />
-  <package id="Microsoft.ApplicationInsights" version="2.5.1" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights" version="2.5.1" targetFramework="net45" requireReinstallation="true" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.5.1" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.5.1" targetFramework="net45" />
@@ -15,6 +18,13 @@
   <package id="Microsoft.AspNet.Mvc.ko" version="5.2.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor.ko" version="3.2.4" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR" version="2.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core.ko" version="2.2.2" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.ko" version="2.2.2" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb.ko" version="2.2.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization.ko" version="1.1.3" targetFramework="net45" />
@@ -27,11 +37,19 @@
   <package id="Microsoft.AspNet.WebApi.WebHost.ko" version="5.2.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.ko" version="3.2.4" targetFramework="net45" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net45" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net45" requireReinstallation="true" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb.ko" version="4.0.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.ko" version="4.0.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.ko" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net45" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net45" />
+  <package id="MySql.Data" version="8.0.12" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net45" requireReinstallation="true" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
